Changed gradient color, added footer with fixed position, and text aligned to the right

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
 	background: blue;
-	background: linear-gradient(#87CEFA, white);
+	background: linear-gradient(#4169E1, white);
 	background-attachment: fixed;
 }
 
@@ -11,4 +11,15 @@ h1{
   font-family: 'Futura PT', sans-serif;
   font-weight: bold;
   padding-top: 1em;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #4169E1	;
+  text-align: right;
+  height: 4em;
+  color: white;
+  
 }
